# rs-api

./: .gitignore  Cargo.toml
chapter-02/rs-api/: Cargo.toml
chapter-02/rs-api/src/middleware/: mod.rs  response_middleware.rs
chapter-02/rs-practice/src/: main.rs
chapter-02/rs-practice/src/core/: constants.rs
rs-api/: Cargo.toml
rs-api/src/: main.rs
rs-api/src/handler/: login.rs  user.rs
rs-api/src/middleware/: logging_middleware.rs  response_middleware.rs  traceid_middleware.rs
rs-api/src/model/: login.rs  user.rs
rs-api/src/response/: common.rs  exception.rs  mod.rs
rs-api/src/utils/: crypto.rs
rs-practice/: Cargo.toml
rs-practice/src/core/: api.rs  mod.rs  model.rs  product.rs
