[package]
name = "rs-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web.workspace = true
actix-service.workspace = true
bcrypt.workspace = true
futures.workspace = true
futures-util.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
